# json-echo

./: .gitignore  Cargo.toml  README.md  json-echo.json  schema.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  server.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  database.rs  errors.rs  filesystem.rs  lib.rs
crates/core/tests/: config_tests.rs  database_tests.rs  filesystem_tests.rs
examples/: README.md  basic-api.json  external-files.json  full-featured.json  static-files.json
examples/data/: categories.json  products.json
